--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <div class="header">PDF Reader.com</div>
+    <div class="header">PDF Reader</div>
 
     <div class="box1">
       <button class="delete-button">X</button>
