--- a/project.html
+++ b/project.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="project.css" />
   </head>
   <body>
+    <div class="header">PDF Reader</div>
 
     <!-- Sidebar toggle checkbox -->
     <input type="checkbox" id="toggleSidebar" />
@@ -31,6 +32,7 @@
         <div class="drop-area">
           Drag and drop file here
           <input class="insert" type="file" />
+          <button class="remove-btn">X</button>
         </div>
         <p class="file-limit">Limit 25MB per file • PDF, DOCX, TXT</p>
       </section>
@@ -51,5 +53,6 @@
         </section>
       </div>
     </div>
+    
   </body>
 </html>
